--- a/Design.ui
+++ b/Design.ui
@@ -155,13 +155,16 @@
         </property>
        </widget>
       </widget>
-      <widget class="QFrame" name="frame_7">
+      <widget class="QFrame" name="frame_8">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>240</y>
-         <width>441</width>
-         <height>91</height>
+         <x>20</x>
+         <y>340</y>
+         <width>451</width>
+         <height>81</height>
         </rect>
        </property>
        <property name="frameShape">
@@ -170,88 +173,60 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <widget class="QLabel" name="label_4">
+       <widget class="QProgressBar" name="progressBar">
         <property name="geometry">
          <rect>
-          <x>10</x>
+          <x>30</x>
+          <y>50</y>
+          <width>391</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="value">
+         <number>50</number>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_8">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="geometry">
+         <rect>
+          <x>70</x>
           <y>20</y>
-          <width>231</width>
+          <width>301</width>
           <height>16</height>
          </rect>
         </property>
-        <property name="text">
-         <string>С каким интервалом?</string>
-        </property>
-       </widget>
-       <widget class="QSpinBox" name="spinBox">
-        <property name="geometry">
-         <rect>
-          <x>50</x>
-          <y>40</y>
-          <width>51</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_5">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>40</y>
-          <width>31</width>
-          <height>16</height>
-         </rect>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
         </property>
         <property name="text">
-         <string>Раз в </string>
+         <string>Выполняется копирование данных:</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
         </property>
        </widget>
-       <widget class="QLabel" name="label_6">
-        <property name="geometry">
-         <rect>
-          <x>110</x>
-          <y>40</y>
-          <width>41</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>дней, с</string>
-        </property>
-       </widget>
-       <widget class="QTimeEdit" name="timeEdit">
-        <property name="geometry">
-         <rect>
-          <x>150</x>
-          <y>40</y>
-          <width>61</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_7">
-        <property name="geometry">
-         <rect>
-          <x>220</x>
-          <y>40</y>
-          <width>21</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>по</string>
-        </property>
-       </widget>
-       <widget class="QTimeEdit" name="timeEdit_2">
-        <property name="geometry">
-         <rect>
-          <x>240</x>
-          <y>40</y>
-          <width>61</width>
-          <height>22</height>
-         </rect>
-        </property>
-       </widget>
+      </widget>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>260</y>
+         <width>101</width>
+         <height>33</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Копировать</string>
+       </property>
       </widget>
      </widget>
     </item>
@@ -306,19 +281,6 @@
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_2">
-          <item>
-           <widget class="QPushButton" name="pushButton_2">
-            <property name="font">
-             <font>
-              <weight>50</weight>
-              <bold>false</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>Начать</string>
-            </property>
-           </widget>
-          </item>
           <item>
            <widget class="QPushButton" name="pushButton_3">
             <property name="font">
